XML 8.12.19 Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.12.19.

--- a/Finnish/main/Browser.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Browser.apk/res/values-fi-rFI/strings.xml
@@ -105,6 +105,7 @@
     <string name="alert_tips">Tämä sivusto saattaa olla turvallisuusriski</string>
     <string name="allow">Salli</string>
     <string name="app_download_market_text">Käytä Mi Markettia lataaksesi, nopeammin ja turvallisemmin</string>
+    <string name="app_name">InfoStream</string>
     <string name="app_new_version">Uusin versio tästä sovelluksesta on jo asennettuna</string>
     <string name="app_update_install">Valmiina asentamaan päivitys.</string>
     <string name="application_name">Selain</string>
@@ -135,6 +136,7 @@
     <string name="bookmark_btn_select_none">Tyhjennä valinnat</string>
     <string name="bookmark_cannot_save_url">Tätä URL-osoitetta ei voi lisätä kirjanmerkkeihin.</string>
     <string name="bookmark_deleted">Poista kirjanmerkki</string>
+    <string name="bookmark_error_page_title">Tapahtui virhe</string>
     <string name="bookmark_folder_needs_title">Syötä ryhmän nimi</string>
     <string name="bookmark_group_lable">Ryhmä</string>
     <string name="bookmark_move_to">Siirrä kohteeseen</string>
@@ -172,6 +174,7 @@
     <string name="cast_video">Suoratoista video</string>
     <string name="check_security_tip_privacy_policy">Tietosuojakäytäntö</string>
     <string name="check_security_tip_user_agreement">Käyttöehdot</string>
+    <string name="checking_now">Tarkistetaan...</string>
     <string name="choosertitle_sharevia">Jaa sovelluksessa</string>
     <string name="clear_history">Tyhjennä historia</string>
     <string name="clear_search_history">Tyhjennä historia</string>
@@ -199,6 +202,8 @@
     <string name="comment_hint">Kommentoi</string>
     <string name="comment_max_length">Kommenttisi on liian pitkä.</string>
     <string name="comment_menu">Kommentoi</string>
+    <string name="comment_num_description">Kommentin numero</string>
+    <string name="comment_publish_to_topic">Kommentit synkronoidaan kohteeseen</string>
     <string name="common_use_phrase_bottom_bar_text_next">Seuraava</string>
     <string name="common_use_phrase_bottom_bar_text_previous">Edellinen</string>
     <string name="context_menu_add_to_desk_id">Lisää Aloitusnäytölle</string>
@@ -232,6 +237,7 @@
     <string name="current_version_pc">Pöytäkone</string>
     <string name="current_version_phone">Puhelin</string>
     <string name="custom_head_card_text">Usko aina, että jotain hienoa tulee tapahtumaan</string>
+    <string name="custom_head_content_pull_down_text">vedä alas</string>
     <string name="custom_head_pull_down_text">Siirry infoFlow</string>
     <string name="data_monitor">Liikenteen seurannan muistutus</string>
     <string name="data_monitor_dialog_message">Näyttää siltä, että jokin kuluttaa mobiilidataasi. Avaa aloitussivu lopettaaksesi tämän.</string>
@@ -262,7 +268,9 @@
     <string name="dialog_insufficient_space_on_external">Ulkoinen tallennustila on täynnä</string>
     <string name="dialog_media_not_found">Ei voida ladata: ulkoista poistettavaa tallennustilaa ei tunnistettu</string>
     <string name="dialog_queued_body">Tämä tiedosto on jonossa myöhempää latausta varten.</string>
+    <string name="dialog_recovery_tabs_action">Palauta napauttamalla</string>
     <string name="dialog_recovery_tabs_disc">Sulkemattomien sivujen havaitseminen vaatii täyden palauttamisen.</string>
+    <string name="dialog_recovery_tabs_tip">Find webview ei suljettu viime kerralla</string>
     <string name="dialog_recovery_tabs_title">Avaa sivu ennen palauttamista</string>
     <string name="dialog_title_not_available">Ei voitu ladata</string>
     <string name="dialog_title_queued_body">Tiedosto ei ole vielä saatavilla</string>
@@ -482,6 +490,8 @@ katsoaksesi avoimia välilehtiä muilta laitteilta."</string>
     <string name="modify_download_path_no_sdcard_dlg_msg">SD-kortti vaaditaan muokataksesi tätä polkua.</string>
     <string name="more_description">Valikko</string>
     <string name="more_option">Lisää vaihtoehtoja</string>
+    <string name="movie_player_3g_tip_retry">Jatka</string>
+    <string name="movie_player_loading">Tulossa pian：%s</string>
     <string name="mw_abc_action_bar_home_description">Siirry aloitussivulle</string>
     <string name="mw_abc_action_bar_home_description_format">%1$s, %2$s</string>
     <string name="mw_abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
@@ -888,6 +898,7 @@ Muista, että lataamasi tiedostot ja lisäämäsi kirjanmerkin silti tallennetaa
     <string name="navigationbar_rightbutton_actiontext_cancle">Peruuta</string>
     <string name="navigationbar_rightbutton_actiontext_go">Siirry</string>
     <string name="navigationbar_rightbutton_actiontext_search">Etsi</string>
+    <string name="network_error_tips">Verkkovirhe, yritä uudelleen</string>
     <string name="network_not_available_comment">Ei internetyhteyttä, ei voi kommentoida</string>
     <string name="network_show_wifi_setting_tip_dialog_description">Löydettiin läheltä Wi-Fi Hotspot. Yritetäänkö yhdistää?</string>
     <string name="network_show_wifi_setting_tip_dialog_title">Wi-Fi-verkko on käytettävissä</string>
@@ -927,11 +938,18 @@ Muista, että lataamasi tiedostot ja lisäämäsi kirjanmerkin silti tallennetaa
     <string name="permission_unknown">Tuntematon valinta</string>
     <string name="permissions_prompt_message">%s haluaa</string>
     <string name="play_pause_video">Toista tai pysäytä video</string>
+    <string name="play_retry">Replay</string>
     <string name="play_video">Toista video</string>
+    <string name="player_3g_tip_sub_title">Toistaminen luo siirtomaksuja</string>
+    <string name="player_3g_tip_title">Käytetään mobiiliverkkoa tällä hetkellä. Jatkamalla toistamista käyttää tiedonsiirtoasi</string>
+    <string name="player_data_error_tip">Video ei ole toistaiseksi käytettävissä. Yritä myöhemmin uudelleen</string>
+    <string name="player_net_error">Verkkoa ei ole yhdistetty. Tarkista verkkoasetukset</string>
+    <string name="player_no_data">Pahoittelut! Tämä video on poissa.</string>
     <string name="popup_video">Ponnahdusvideo</string>
     <string name="popup_window_attempt">Sallitaanko tämän sivuston avata ponnahdusikkuna?</string>
     <string name="positive_confirm_message">Poista käytöstä siitä huolimatta</string>
     <string name="pref_accept_quicklink_push">Uutissyöte</string>
+    <string name="pref_accessibility_recommending_search_title">Suositushaku</string>
     <string name="pref_accessibility_title">Esteettömyys</string>
     <string name="pref_accessibility_url_shortcut_enter_summary">Yleisiä kirjainyhdistelmiä voi antaa yhdellä napautuksella osoitepalkissa</string>
     <string name="pref_accessibility_url_shortcut_enter_title">Nopea URL-syöttö</string>
@@ -1036,8 +1054,10 @@ Muista, että lataamasi tiedostot ja lisäämäsi kirjanmerkin silti tallennetaa
     <string name="pref_version_info">Versio</string>
     <string name="pref_volume_key_action">Vieritä käyttäen äänenvoimakkuudensäätöpainikkeita</string>
     <string name="progress_dialog_setting_wallpaper">Asetetaan taustakuvaa…</string>
-    <string name="publish_to_topic">julkaise otsikkoon</string>
-    <string name="pull_to_refresh_pull_label">Vedä päivittääksesi</string>
+    <string name="pull_refresh_begin">Päivitä vetämällä alas</string>
+    <string name="pull_refresh_end">Päivitä vapauttamalla</string>
+    <string name="pull_refresh_refreshing">Päivitetään</string>
+    <string name="pull_to_refresh_pull_label">Päivitä vetämällä</string>
     <string name="pull_to_refresh_release_label">Vapauta suositellaksesi ja päivittääksesi</string>
     <string name="pwa_app_name">Verkkosovellukset</string>
     <string name="qr_code_title">QR Koodi</string>
@@ -1070,7 +1090,9 @@ Muista, että lataamasi tiedostot ja lisäämäsi kirjanmerkin silti tallennetaa
     <string name="readmode_recommend_message">Olet lukenut tämän kirjan jo. :)</string>
     <string name="readmode_refresh">Päivitä</string>
     <string name="readmodelist_bookmarks_to_show">Lukulista</string>
+    <string name="recommending_close_toast_text">Sulje tämä ominaisuus lisäasetuksissa</string>
     <string name="refresh_description">Päivitä</string>
+    <string name="refresh_text">Päivitä</string>
     <string name="refuse_permissions_request">Rajoita</string>
     <string name="remember_passwords_confirm_message">Tämän toiminnon poistaminen käytöstä voi vaikuttaa käyttökokemukseen.</string>
     <string name="remove_bookmark">Poista kirjanmerkki</string>
@@ -1169,6 +1191,13 @@ Selaimen täytyy yhdistää internetiin toimiakseen normaalisti. Sinun täytyy h
     <string name="skip_button_label">Ohita</string>
     <string name="skip_current_version">Ohita tämä versio</string>
     <string name="slide_guide">Pyyhkäise palataksesi</string>
+    <string name="small_video_boba_tab">Lähetys</string>
+    <string name="small_video_load_failed">Lataaminen epäonnistui</string>
+    <string name="small_video_loading">Ladataan...</string>
+    <string name="small_video_main_tab">Suositukset</string>
+    <string name="small_video_native_tab">Pieni video</string>
+    <string name="small_video_net_error">Yhteysvirhe</string>
+    <string name="small_video_no_more_date">Ei tietoa</string>
     <string name="snapshot">Paikallinen</string>
     <string name="snapshot_failed">Sivua ei voitu tallentaa.</string>
     <string name="snapshot_successed">Avaa Kirjanmerkit &amp; Historia -%gt; PAIKALLINEN nähdäksesi sivun</string>
@@ -1252,15 +1281,12 @@ Selaimen täytyy yhdistää internetiin toimiakseen normaalisti. Sinun täytyy h
     <string name="tab_quicklinks">Aloitussivu</string>
     <string name="tab_yellowpage">Linkit</string>
     <string name="tabs_description">Välilehdet</string>
-    <string name="tae_sdk_login_qr_icon_close"></string>
-    <string name="tae_sdk_login_qr_icon_taobao"></string>
-    <string name="tae_sdk_qr_login_icon_password"></string>
-    <string name="tae_sdk_qr_login_icon_scan"></string>
     <string name="temp_refuse">Kieltäydy</string>
     <string name="title_bar_loading">Ladataan…</string>
     <string name="title_notice_push">Ota työntö käyttöön</string>
     <string name="too_many_windows_dialog_message">Selain ei voi avata uutta välilehteä ennen kuin suljet jonkun välilehden.</string>
     <string name="too_many_windows_dialog_title">Välilehtiä ei voi avata lisää</string>
+    <string name="topic_content_default">Otsikko</string>
     <string name="transfer_prompt_0">Toista video</string>
     <string name="transfer_restart">Käynnistä uudelleen</string>
     <string name="translation_copy">Kopioi</string>
